crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__limit__stack_overflow.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/limit/stack_overflow.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun foo (global @1) [] []
      (block
         (var a1 (local @0) ∅)
         (var a2 (local @1) ∅)
         (var a3 (local @2) ∅)
         (var a4 (local @3) ∅)
         (var a5 (local @4) ∅)
         (var a6 (local @5) ∅)
         (var a7 (local @6) ∅)
         (var a8 (local @7) ∅)
         (var a9 (local @8) ∅)
         (var a10 (local @9) ∅)
         (var a11 (local @10) ∅)
         (var a12 (local @11) ∅)
         (var a13 (local @12) ∅)
         (var a14 (local @13) ∅)
         (var a15 (local @14) ∅)
         (var a16 (local @15) ∅)
         (expr (call +16 (global foo @1)))))
   (expr (call +2 (global foo @1))))

----- stderr -----
