crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__limit__too_many_constants.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/limit/too_many_constants.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [] []
      (block
         (expr 0.0)
         (expr 1.0)
         (expr 2.0)
         (expr 3.0)
         (expr 4.0)
         (expr 5.0)
         (expr 6.0)
         (expr 7.0)
         (expr 8.0)
         (expr 9.0)
         (expr 10.0)
         (expr 11.0)
         (expr 12.0)
         (expr 13.0)
         (expr 14.0)
         (expr 15.0)
         (expr 16.0)
         (expr 17.0)
         (expr 18.0)
         (expr 19.0)
         (expr 20.0)
         (expr 21.0)
         (expr 22.0)
         (expr 23.0)
         (expr 24.0)
         (expr 25.0)
         (expr 26.0)
         (expr 27.0)
         (expr 28.0)
         (expr 29.0)
         (expr 30.0)
         (expr 31.0)
         (expr 32.0)
         (expr 33.0)
         (expr 34.0)
         (expr 35.0)
         (expr 36.0)
         (expr 37.0)
         (expr 38.0)
         (expr 39.0)
         (expr 40.0)
         (expr 41.0)
         (expr 42.0)
         (expr 43.0)
         (expr 44.0)
         (expr 45.0)
         (expr 46.0)
         (expr 47.0)
         (expr 48.0)
         (expr 49.0)
         (expr 50.0)
         (expr 51.0)
         (expr 52.0)
         (expr 53.0)
         (expr 54.0)
         (expr 55.0)
         (expr 56.0)
         (expr 57.0)
         (expr 58.0)
         (expr 59.0)
         (expr 60.0)
         (expr 61.0)
         (expr 62.0)
         (expr 63.0)
         (expr 64.0)
         (expr 65.0)
         (expr 66.0)
         (expr 67.0)
         (expr 68.0)
         (expr 69.0)
         (expr 70.0)
         (expr 71.0)
         (expr 72.0)
         (expr 73.0)
         (expr 74.0)
         (expr 75.0)
         (expr 76.0)
         (expr 77.0)
         (expr 78.0)
         (expr 79.0)
         (expr 80.0)
         (expr 81.0)
         (expr 82.0)
         (expr 83.0)
         (expr 84.0)
         (expr 85.0)
         (expr 86.0)
         (expr 87.0)
         (expr 88.0)
         (expr 89.0)
         (expr 90.0)
         (expr 91.0)
         (expr 92.0)
         (expr 93.0)
         (expr 94.0)
         (expr 95.0)
         (expr 96.0)
         (expr 97.0)
         (expr 98.0)
         (expr 99.0)
         (expr 100.0)
         (expr 101.0)
         (expr 102.0)
         (expr 103.0)
         (expr 104.0)
         (expr 105.0)
         (expr 106.0)
         (expr 107.0)
         (expr 108.0)
         (expr 109.0)
         (expr 110.0)
         (expr 111.0)
         (expr 112.0)
         (expr 113.0)
         (expr 114.0)
         (expr 115.0)
         (expr 116.0)
         (expr 117.0)
         (expr 118.0)
         (expr 119.0)
         (expr 120.0)
         (expr 121.0)
         (expr 122.0)
         (expr 123.0)
         (expr 124.0)
         (expr 125.0)
         (expr 126.0)
         (expr 127.0)
         (expr 128.0)
         (expr 129.0)
         (expr 130.0)
         (expr 131.0)
         (expr 132.0)
         (expr 133.0)
         (expr 134.0)
         (expr 135.0)
         (expr 136.0)
         (expr 137.0)
         (expr 138.0)
         (expr 139.0)
         (expr 140.0)
         (expr 141.0)
         (expr 142.0)
         (expr 143.0)
         (expr 144.0)
         (expr 145.0)
         (expr 146.0)
         (expr 147.0)
         (expr 148.0)
         (expr 149.0)
         (expr 150.0)
         (expr 151.0)
         (expr 152.0)
         (expr 153.0)
         (expr 154.0)
         (expr 155.0)
         (expr 156.0)
         (expr 157.0)
         (expr 158.0)
         (expr 159.0)
         (expr 160.0)
         (expr 161.0)
         (expr 162.0)
         (expr 163.0)
         (expr 164.0)
         (expr 165.0)
         (expr 166.0)
         (expr 167.0)
         (expr 168.0)
         (expr 169.0)
         (expr 170.0)
         (expr 171.0)
         (expr 172.0)
         (expr 173.0)
         (expr 174.0)
         (expr 175.0)
         (expr 176.0)
         (expr 177.0)
         (expr 178.0)
         (expr 179.0)
         (expr 180.0)
         (expr 181.0)
         (expr 182.0)
         (expr 183.0)
         (expr 184.0)
         (expr 185.0)
         (expr 186.0)
         (expr 187.0)
         (expr 188.0)
         (expr 189.0)
         (expr 190.0)
         (expr 191.0)
         (expr 192.0)
         (expr 193.0)
         (expr 194.0)
         (expr 195.0)
         (expr 196.0)
         (expr 197.0)
         (expr 198.0)
         (expr 199.0)
         (expr 200.0)
         (expr 201.0)
         (expr 202.0)
         (expr 203.0)
         (expr 204.0)
         (expr 205.0)
         (expr 206.0)
         (expr 207.0)
         (expr 208.0)
         (expr 209.0)
         (expr 210.0)
         (expr 211.0)
         (expr 212.0)
         (expr 213.0)
         (expr 214.0)
         (expr 215.0)
         (expr 216.0)
         (expr 217.0)
         (expr 218.0)
         (expr 219.0)
         (expr 220.0)
         (expr 221.0)
         (expr 222.0)
         (expr 223.0)
         (expr 224.0)
         (expr 225.0)
         (expr 226.0)
         (expr 227.0)
         (expr 228.0)
         (expr 229.0)
         (expr 230.0)
         (expr 231.0)
         (expr 232.0)
         (expr 233.0)
         (expr 234.0)
         (expr 235.0)
         (expr 236.0)
         (expr 237.0)
         (expr 238.0)
         (expr 239.0)
         (expr 240.0)
         (expr 241.0)
         (expr 242.0)
         (expr 243.0)
         (expr 244.0)
         (expr 245.0)
         (expr 246.0)
         (expr 247.0)
         (expr 248.0)
         (expr 249.0)
         (expr 250.0)
         (expr 251.0)
         (expr 252.0)
         (expr 253.0)
         (expr 254.0)
         (expr 255.0)
         (expr "oops"))))

----- stderr -----
