crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__limit__too_many_locals.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/limit/too_many_locals.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @3) [] []
      (block
         (var v01 (local @0) ∅)
         (var v02 (local @1) ∅)
         (var v03 (local @2) ∅)
         (var v04 (local @3) ∅)
         (var v05 (local @4) ∅)
         (var v06 (local @5) ∅)
         (var v07 (local @6) ∅)
         (var v08 (local @7) ∅)
         (var v09 (local @8) ∅)
         (var v0a (local @9) ∅)
         (var v0b (local @10) ∅)
         (var v0c (local @11) ∅)
         (var v0d (local @12) ∅)
         (var v0e (local @13) ∅)
         (var v0f (local @14) ∅)
         (var v10 (local @15) ∅)
         (var v11 (local @16) ∅)
         (var v12 (local @17) ∅)
         (var v13 (local @18) ∅)
         (var v14 (local @19) ∅)
         (var v15 (local @20) ∅)
         (var v16 (local @21) ∅)
         (var v17 (local @22) ∅)
         (var v18 (local @23) ∅)
         (var v19 (local @24) ∅)
         (var v1a (local @25) ∅)
         (var v1b (local @26) ∅)
         (var v1c (local @27) ∅)
         (var v1d (local @28) ∅)
         (var v1e (local @29) ∅)
         (var v1f (local @30) ∅)
         (var v20 (local @31) ∅)
         (var v21 (local @32) ∅)
         (var v22 (local @33) ∅)
         (var v23 (local @34) ∅)
         (var v24 (local @35) ∅)
         (var v25 (local @36) ∅)
         (var v26 (local @37) ∅)
         (var v27 (local @38) ∅)
         (var v28 (local @39) ∅)
         (var v29 (local @40) ∅)
         (var v2a (local @41) ∅)
         (var v2b (local @42) ∅)
         (var v2c (local @43) ∅)
         (var v2d (local @44) ∅)
         (var v2e (local @45) ∅)
         (var v2f (local @46) ∅)
         (var v30 (local @47) ∅)
         (var v31 (local @48) ∅)
         (var v32 (local @49) ∅)
         (var v33 (local @50) ∅)
         (var v34 (local @51) ∅)
         (var v35 (local @52) ∅)
         (var v36 (local @53) ∅)
         (var v37 (local @54) ∅)
         (var v38 (local @55) ∅)
         (var v39 (local @56) ∅)
         (var v3a (local @57) ∅)
         (var v3b (local @58) ∅)
         (var v3c (local @59) ∅)
         (var v3d (local @60) ∅)
         (var v3e (local @61) ∅)
         (var v3f (local @62) ∅)
         (var v40 (local @63) ∅)
         (var v41 (local @64) ∅)
         (var v42 (local @65) ∅)
         (var v43 (local @66) ∅)
         (var v44 (local @67) ∅)
         (var v45 (local @68) ∅)
         (var v46 (local @69) ∅)
         (var v47 (local @70) ∅)
         (var v48 (local @71) ∅)
         (var v49 (local @72) ∅)
         (var v4a (local @73) ∅)
         (var v4b (local @74) ∅)
         (var v4c (local @75) ∅)
         (var v4d (local @76) ∅)
         (var v4e (local @77) ∅)
         (var v4f (local @78) ∅)
         (var v50 (local @79) ∅)
         (var v51 (local @80) ∅)
         (var v52 (local @81) ∅)
         (var v53 (local @82) ∅)
         (var v54 (local @83) ∅)
         (var v55 (local @84) ∅)
         (var v56 (local @85) ∅)
         (var v57 (local @86) ∅)
         (var v58 (local @87) ∅)
         (var v59 (local @88) ∅)
         (var v5a (local @89) ∅)
         (var v5b (local @90) ∅)
         (var v5c (local @91) ∅)
         (var v5d (local @92) ∅)
         (var v5e (local @93) ∅)
         (var v5f (local @94) ∅)
         (var v60 (local @95) ∅)
         (var v61 (local @96) ∅)
         (var v62 (local @97) ∅)
         (var v63 (local @98) ∅)
         (var v64 (local @99) ∅)
         (var v65 (local @100) ∅)
         (var v66 (local @101) ∅)
         (var v67 (local @102) ∅)
         (var v68 (local @103) ∅)
         (var v69 (local @104) ∅)
         (var v6a (local @105) ∅)
         (var v6b (local @106) ∅)
         (var v6c (local @107) ∅)
         (var v6d (local @108) ∅)
         (var v6e (local @109) ∅)
         (var v6f (local @110) ∅)
         (var v70 (local @111) ∅)
         (var v71 (local @112) ∅)
         (var v72 (local @113) ∅)
         (var v73 (local @114) ∅)
         (var v74 (local @115) ∅)
         (var v75 (local @116) ∅)
         (var v76 (local @117) ∅)
         (var v77 (local @118) ∅)
         (var v78 (local @119) ∅)
         (var v79 (local @120) ∅)
         (var v7a (local @121) ∅)
         (var v7b (local @122) ∅)
         (var v7c (local @123) ∅)
         (var v7d (local @124) ∅)
         (var v7e (local @125) ∅)
         (var v7f (local @126) ∅)
         (var v80 (local @127) ∅)
         (var v81 (local @128) ∅)
         (var v82 (local @129) ∅)
         (var v83 (local @130) ∅)
         (var v84 (local @131) ∅)
         (var v85 (local @132) ∅)
         (var v86 (local @133) ∅)
         (var v87 (local @134) ∅)
         (var v88 (local @135) ∅)
         (var v89 (local @136) ∅)
         (var v8a (local @137) ∅)
         (var v8b (local @138) ∅)
         (var v8c (local @139) ∅)
         (var v8d (local @140) ∅)
         (var v8e (local @141) ∅)
         (var v8f (local @142) ∅)
         (var v90 (local @143) ∅)
         (var v91 (local @144) ∅)
         (var v92 (local @145) ∅)
         (var v93 (local @146) ∅)
         (var v94 (local @147) ∅)
         (var v95 (local @148) ∅)
         (var v96 (local @149) ∅)
         (var v97 (local @150) ∅)
         (var v98 (local @151) ∅)
         (var v99 (local @152) ∅)
         (var v9a (local @153) ∅)
         (var v9b (local @154) ∅)
         (var v9c (local @155) ∅)
         (var v9d (local @156) ∅)
         (var v9e (local @157) ∅)
         (var v9f (local @158) ∅)
         (var va0 (local @159) ∅)
         (var va1 (local @160) ∅)
         (var va2 (local @161) ∅)
         (var va3 (local @162) ∅)
         (var va4 (local @163) ∅)
         (var va5 (local @164) ∅)
         (var va6 (local @165) ∅)
         (var va7 (local @166) ∅)
         (var va8 (local @167) ∅)
         (var va9 (local @168) ∅)
         (var vaa (local @169) ∅)
         (var vab (local @170) ∅)
         (var vac (local @171) ∅)
         (var vad (local @172) ∅)
         (var vae (local @173) ∅)
         (var vaf (local @174) ∅)
         (var vb0 (local @175) ∅)
         (var vb1 (local @176) ∅)
         (var vb2 (local @177) ∅)
         (var vb3 (local @178) ∅)
         (var vb4 (local @179) ∅)
         (var vb5 (local @180) ∅)
         (var vb6 (local @181) ∅)
         (var vb7 (local @182) ∅)
         (var vb8 (local @183) ∅)
         (var vb9 (local @184) ∅)
         (var vba (local @185) ∅)
         (var vbb (local @186) ∅)
         (var vbc (local @187) ∅)
         (var vbd (local @188) ∅)
         (var vbe (local @189) ∅)
         (var vbf (local @190) ∅)
         (var vc0 (local @191) ∅)
         (var vc1 (local @192) ∅)
         (var vc2 (local @193) ∅)
         (var vc3 (local @194) ∅)
         (var vc4 (local @195) ∅)
         (var vc5 (local @196) ∅)
         (var vc6 (local @197) ∅)
         (var vc7 (local @198) ∅)
         (var vc8 (local @199) ∅)
         (var vc9 (local @200) ∅)
         (var vca (local @201) ∅)
         (var vcb (local @202) ∅)
         (var vcc (local @203) ∅)
         (var vcd (local @204) ∅)
         (var vce (local @205) ∅)
         (var vcf (local @206) ∅)
         (var vd0 (local @207) ∅)
         (var vd1 (local @208) ∅)
         (var vd2 (local @209) ∅)
         (var vd3 (local @210) ∅)
         (var vd4 (local @211) ∅)
         (var vd5 (local @212) ∅)
         (var vd6 (local @213) ∅)
         (var vd7 (local @214) ∅)
         (var vd8 (local @215) ∅)
         (var vd9 (local @216) ∅)
         (var vda (local @217) ∅)
         (var vdb (local @218) ∅)
         (var vdc (local @219) ∅)
         (var vdd (local @220) ∅)
         (var vde (local @221) ∅)
         (var vdf (local @222) ∅)
         (var ve0 (local @223) ∅)
         (var ve1 (local @224) ∅)
         (var ve2 (local @225) ∅)
         (var ve3 (local @226) ∅)
         (var ve4 (local @227) ∅)
         (var ve5 (local @228) ∅)
         (var ve6 (local @229) ∅)
         (var ve7 (local @230) ∅)
         (var ve8 (local @231) ∅)
         (var ve9 (local @232) ∅)
         (var vea (local @233) ∅)
         (var veb (local @234) ∅)
         (var vec (local @235) ∅)
         (var ved (local @236) ∅)
         (var vee (local @237) ∅)
         (var vef (local @238) ∅)
         (var vf0 (local @239) ∅)
         (var vf1 (local @240) ∅)
         (var vf2 (local @241) ∅)
         (var vf3 (local @242) ∅)
         (var vf4 (local @243) ∅)
         (var vf5 (local @244) ∅)
         (var vf6 (local @245) ∅)
         (var vf7 (local @246) ∅)
         (var vf8 (local @247) ∅)
         (var vf9 (local @248) ∅)
         (var vfa (local @249) ∅)
         (var vfb (local @250) ∅)
         (var vfc (local @251) ∅)
         (var vfd (local @252) ∅)
         (var vfe (local @253) ∅)
         (var vff (local @254) ∅)
         (var oops (local @255) ∅))))

----- stderr -----
